# kotaemon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  flowsettings.py  launch.sh  pyproject.toml
.github/workflows/: deploy-demo.yaml  style-check.yaml  unit-test.yaml
deploy/: Caddyfile  README.md  bootstrap.sh  docker-compose.prod.yml
docs/development/: contributing.md
libs/kotaemon/: README.md  pyproject.toml
libs/kotaemon/kotaemon/indices/ingests/: files.py
libs/kotaemon/kotaemon/loaders/: __init__.py  docling_loader.py  quality_gated_pdf_loader.py
libs/kotaemon/tests/: test_quality_gated_pdf.py
libs/ktem/: pyproject.toml
libs/ktem/ktem/: main.py
libs/ktem/ktem/embeddings/: manager.py
libs/ktem/ktem/index/: manager.py
libs/ktem/ktem/index/file/: pipelines.py
libs/ktem/ktem/llms/: manager.py
libs/ktem/ktem/rerankings/: manager.py
scripts/: run_linux.sh  run_macos.sh  run_windows.bat  server_llamacpp_linux.sh  server_llamacpp_macos.sh  server_llamacpp_windows.bat
templates/project-default/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md
