# build backand and build dependencies
[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ["kotaemon*"]
packages.find.exclude = ["tests*", "env*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

# metadata and dependencies
[project]
name = "kotaemon"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Kotaemon core library for AI development."
dependencies = [
    "beautifulsoup4>=4.12.3,<4.13",
    "click>=8.1.7,<9",
    "cookiecutter>=2.6.0,<2.7",
    "fast_langdetect",
    "fastapi<=0.112.1",
    "gradio>=4.31.0,<5",
    "html2text==2024.2.26",
    "langchain<2",
    "langchain-community<1",
    "llama-hub>=0.0.79,<0.1.0",
    "llama-index>=0.10.40,<0.11.0",
    "chromadb<=0.5.16",
    "llama-index-vector-stores-chroma>=0.1.9",
    "llama-index-vector-stores-lancedb",
    "openai>=1.23.6,<2",
    "matplotlib",
    "matplotlib-inline",
    "openpyxl>=3.1.2,<3.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0", # https://github.com/chroma-core/chroma/issues/2571
    "pandas>=2.2.2,<2.3",
    "plotly<6.0.0",
    "PyMuPDF>=1.23,<=1.24.11",
    "pypdf>=4.2.0,<4.3",
    "pylance",
    "python-decouple", # for theflow
    "python-docx>=1.1.0,<1.2",
    "python-dotenv>=1.0.1,<1.1",
    "tenacity>=8.2.3,<8.3",
    "theflow>=0.8.6,<0.9.0",
    "trogon>=0.5.0,<0.6",
    "umap-learn==0.5.5",
    "pydantic<=2.10.6",
]
readme = "README.md"
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
provider-openai = ["langchain-openai<2"]
provider-azure = ["azure-ai-documentintelligence", "langchain-openai<2"]
provider-cohere = ["cohere>=5.3.2,<6", "langchain-cohere<1"]
provider-google = ["langchain-google-genai<5"]
provider-anthropic = ["langchain-anthropic<2"]
provider-mistral = ["langchain-mistralai<2"]
provider-voyageai = ["voyageai>=0.3.0"]
provider-ollama = ["langchain-ollama<2"]
local-llama-cpp = ["llama-cpp-python<0.2.8"]
embedding-fastembed = ["fastembed", "onnxruntime<v1.20"]
embedding-huggingface = ["sentence-transformers"]
store-elasticsearch = ["elasticsearch>=8.13.0,<8.14"]
store-qdrant = ["llama-index-vector-stores-qdrant"]
store-milvus = ["llama-index-vector-stores-milvus"]
reader-unstructured = ["unstructured>=0.15.8,<0.16"]
reader-docling = ["docling<=2.5.2", "docling-core==2.5.1"]
reader-paddleocr = ["paddleocr[doc-parser]"]
tools-web = [
    "duckduckgo-search>=6.1.0,<6.2",
    "googlesearch-python>=1.2.4,<1.3",
    "tavily-python>=0.4.0",
    "wikipedia>=1.4.0,<1.5",
]
tools-mcp-cli = ["mcp[cli]>=1.0.0"]
graphrag-light = [
    "aioboto3",
    "nano-vectordb",
    "ollama",
    "xxhash",
    "lightrag-hku<=1.3.0",
]
graphrag-nano = ["nano-graphrag"]
runtime-lite = [
    "kotaemon[provider-openai,provider-cohere,provider-google,provider-ollama,provider-voyageai]",
]
runtime-ollama = ["kotaemon[provider-ollama]"]
runtime-graphrag-light = ["kotaemon[runtime-lite,graphrag-light]"]
runtime-graphrag-nano = ["kotaemon[runtime-lite,graphrag-nano]"]
runtime-full = [
    "kotaemon[runtime-lite,embedding-fastembed,embedding-huggingface,local-llama-cpp,reader-unstructured,store-elasticsearch,store-milvus,store-qdrant,tools-mcp-cli,tools-web,provider-anthropic,provider-mistral]",
]
adv = [
    "kotaemon[embedding-fastembed,embedding-huggingface,local-llama-cpp,reader-unstructured,store-elasticsearch,store-milvus,store-qdrant,tools-mcp-cli,tools-web,provider-voyageai]",
    "llama-index>=0.10.40,<0.11.0",
    "tabulate",
]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "sphinx",
]
docling = ["kotaemon[reader-docling]"]
paddleocr = ["kotaemon[reader-paddleocr]"]
lightrag = ["kotaemon[graphrag-light]"]
all = ["kotaemon[adv,dev]"]

[project.scripts]
kotaemon = "kotaemon.cli:main"
